--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <title>Gitの勉強</title>
 </head>
 <body>
-    <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1> pa
+    <h1>gh-pagesブランチはGitHub Pagesに公開されます。</h1>
 </html>
